practice heading and strong tag

--- a/Day 1/Fisrt.html
+++ b/Day 1/Fisrt.html
@@ -1,2 +1,9 @@
-Hi I am Musfiq.
+<strong>I am Musfiq.</strong> 
 <p>I am strong. I am determined. I will become a <b><i>web developer</i></b>.</p>
+
+<h1>Minister</h1>
+<h2>Member of parlament</h2>
+<h3>Mayor of the city</h3>
+<h4>Word commisionar</h4>
+<h5>Father</h5>
+<h6>Me</h6>
