practice some tag

--- a/Day 1/Fisrt.html
+++ b/Day 1/Fisrt.html
@@ -8,4 +8,41 @@
 <h5>Father</h5>
 <h6>Me</h6>
 
+<div>
+    <h3>Blog</h3>
+    <p>adfsdfafd</p>
+</div>
+
+<form>
+    <input type="text"> <br>
+    <input type="password"> <br>
+    <input type="checkbox"> <br>
+    <input type="radio"><br>
+    <input type="file"><br>
+    <button>Submit</button>
+</form>
+
+
+<ol>
+    <li>Polaw</li>
+    <li>Kala buna</li>
+    <li>Borhani</li>
+    <li>Coke</li>
+</ol>
+<ul>
+    <li>Polaw</li>
+    <li>Kala buna</li>
+    <li>Borhani</li>
+    <li>Coke</li>
+</ul>
+
+<li>Polaw</li>
+<li>Kala buna</li>
+<li>Borhani</li>
+<li>Coke</li>
+
 <a href="https://www.google.com">Google e jaw</a>
+
+<img src="c1.jpg" alt="">
+
+
