some basic css tag

--- a/Day 2/css.html
+++ b/Day 2/css.html
@@ -8,6 +8,10 @@
     <style>
         p{
             color: red;
+            background-color: indigo;
+            height: 50px;
+            width: 50%;
+            font-size: 16px;
         }
         h1{
             color: rgba(34, 138, 89, 0.644);
@@ -16,10 +20,11 @@
 </head>
 <body>
     <h1>I am exploring CSS</h1>
+    <p>Podda Megna Jomonar tire, Koto dhew cole jay, Ase nato fire. Emone amio hariye jabo, Asbo na kobo fire.</p>
     <p>Podda Megna Jomonar tire</p>
     <p>Koto dhew cole jay</p>
     <p>Ase nato fire</p>
-    <p>Emone amio hariye jabe</p>
+    <p>Emone amio hariye jabo</p>
     <p>Asbo na kobo fire</p>
 </body>
 </html>
