practice class and id tag

--- a/Day 2/css.html
+++ b/Day 2/css.html
@@ -16,15 +16,34 @@
         h1{
             color: rgba(34, 138, 89, 0.644);
         }
+        #hotas{
+            color: royalblue;
+        }
+        #jabe{
+            background-color: gray;
+        }
+
+        .first{
+            color: indianred;
+        }
     </style>
 </head>
 <body>
     <h1>I am exploring CSS</h1>
+    <h3 id="hotas">Hotas Hoyona</h3>
+    <h3 id="jabe">Eidin Foriye jabe</h3>
+    <h3>In Sha Allah</h3>
+    <h4 class="first">First</h4>
+    <h4>Second</h4>
+    <h4>Third</h4>
+    <h4>Fourth</h4>
+    <h4>Fifth</h4>
     <p>Podda Megna Jomonar tire, Koto dhew cole jay, Ase nato fire. Emone amio hariye jabo, Asbo na kobo fire.</p>
     <p>Podda Megna Jomonar tire</p>
     <p>Koto dhew cole jay</p>
     <p>Ase nato fire</p>
     <p>Emone amio hariye jabo</p>
     <p>Asbo na kobo fire</p>
+    <h1>Socially distance header tag</h1>
 </body>
 </html>
